# galemind-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md  tarpaulin.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: DOCKER_SETUP.md  pull_request_template.md
.github/workflows/: ci.yaml  docker-build-push-maybe-deploy.yaml  docker-build-push.yaml  e2e-tests.yml  k8s-deploy.yaml  k8s-deploy.yml
doc/design/: batching.md  circular-buffer.md
infra/: README.md
infra/environments/dev/: values.yaml
infra/environments/production/: values.yaml
infra/environments/staging/: values.yaml
infra/helm/environments/dev/: values.yaml
infra/helm/environments/production/: values.yaml
infra/helm/environments/staging/: values.yaml
infra/helm/galemind-server/: Chart.yaml  values.yaml
src/foundation/: Cargo.toml
src/foundation/src/: lib.rs
src/foundation/src/api/: mlflow_client.rs  mod.rs
src/foundation/src/model/: circular_buffer.rs  mod.rs  model_discovery_service.rs  model_manager.rs  scheduler.rs
src/galemind/: Cargo.toml
src/galemind/src/: main.rs
src/grpc_server/: Cargo.toml  build.rs
src/grpc_server/src/: lib.rs  translator.rs
src/rest_server/: Cargo.toml
src/rest_server/src/: conversion.rs  healthcheck.rs  lib.rs  model.rs  openai_models.rs  protocol.rs  server.rs  unified_endpoints.rs
tests/: Cargo.toml  README.md  run_e2e_tests.sh
tests/src/: common.rs  grpc_client.rs  lib.rs  rest_client.rs
tests/tests/: grpc_e2e_tests.rs  integration_tests.rs  rest_e2e_tests.rs
(+10 files in other folders)
