[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"